# gauc

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  watch.sh
examples/: couchbase.rs  hello_world.rs  hello_world_upsert_sync.rs
src/: lib.rs  main.rs
src/cli/cmd/: get.rs  remove.rs  upsert.rs
src/client/: mod.rs
src/couchbase/: funcs.rs
src/couchbase/types/: auth_type.rs  authenticator.rs  create_st.rs  create_st3.rs  error_type.rs  instance.rs  mod.rs
src/web/: mod.rs
