[package]
name = "gauc"
version = "0.7.0"
authors = ["Tomas Korcak <korczis@gmail.com>"]

description = "Couchbase Rust Adapter / CLI"

# These URLs point to more information about the repository.
documentation = "https://docs.rs/gauc/"
homepage = "https://github.com/korczis/gauc"
repository = "https://github.com/korczis/gauc"

# This points to a file in the repository (relative to this `Cargo.toml`). The
# contents of this file are stored and indexed in the registry.
readme = "README.md"

# This is a small list of keywords used to categorize and search for this
# package.
keywords = ["couchbase", "database"]

license = "MIT"

[dependencies]
clap = "2.27"
ctrlc = "3.0"
env_logger = "0.4"
hyper = "0.10"
iron = "0.5"
lazy_static = "0.2"
libc = "0.2"
log = "0.3"
params = "0.7"
router = "0.5"
serde = "1.0"
serde_json = "1.0"

[lib]
name = "gauc"
path = "src/lib.rs"

[[bin]]
name = "gauc"
doc = false
path = "src/main.rs"

# Debug settings
[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with
debug = true       # controls whether the compiler passes `-g`
rpath = false      # controls whether the compiler passes `-C rpath`
lto = false        # controls `-C lto` for binaries and staticlibs
debug-assertions = true # controls whether debug assertions are enabled
codegen-units = 1  # controls whether the compiler passes `-C codegen-units`
                   # `codegen-units` is ignored when `lto = true`
panic = 'unwind'   # panic strategy (`-C panic=...`), can also be 'abort'

# Release settings
[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'unwind'
